ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: default
spec:
  rules:
  - host: smogitify.madhavbudhiraja.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: react-service
          servicePort: 3000
